# alexa_adhan

./: .flake8  .gitignore  .prettierrc  LICENSE  Makefile  README.md  ask-resources.json  context_system_payload_example.json  pyproject.toml  requirements-dev.txt  samconfig.toml  skill.json  template.yaml
.github/workflows/: deploy.yml
adhan/services/: prayer_service.py
docs/: alexa-reminders.md
lambda/: app.py
lambda/auth/: auth_permissions.py
lambda/handlers/: audio_handler.py  request_handler.py
lambda/services/: geolocation_service.py  notification_service.py  prayer_notification_service.py  prayer_times_service.py  request_handlers.py
lambda/speech_text/: __init__.py  en_speech_text.py  fr_speech_text.py
lambda_layers/prayer_times_functions_layers/: Makefile  requirements.txt
skill-package/: skill.json
skill-package/interactionModels/custom/: en-US.json  fr-FR.json
tests/: test_local.py
tests/events/: get_prayer_times.json
