[tool.poetry]
name = "alexa-adhan"
version = "0.1.0"
description = ""
authors = ["zerubeus <zerubeus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aws-lambda-powertools = "^3.4.1"
ask-sdk = "^1.19.0"
boto3 = "^1.36.7"
requests = "^2.32.3"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
